--- a/pinyougou-commom/pom.xml
+++ b/pinyougou-commom/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>pinyougou-commom</artifactId>
 
+    <dependencies>
+        <!--文件上传依赖-->
+        <dependency>
+            <groupId>org.csource.fastdfs</groupId>
+            <artifactId>fastdfs</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
