--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,19 @@
                 <artifactId>xml-apis</artifactId>
                 <version>1.4.01</version>
             </dependency>
+
+            <!--文件上传组件-->
+            <dependency>
+                <groupId>org.csource.fastdfs</groupId>
+                <artifactId>fastdfs</artifactId>
+                <version>1.2</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
