--- a/pinyougou-commom/pom.xml
+++ b/pinyougou-commom/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>servlet-api</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
     </dependencies>
 
 
