--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,8 @@
         <module>pinyougou-order-interface</module>
         <module>pinyougou-order-service</module>
         <module>pinyougou-pay-interface</module>
+        <module>pinyougou-pay-service</module>
+        <module>pinyougou-seckill-interface</module>
     </modules>
 
     <!-- 集中定义依赖版本号 -->
